Make StructuredVersion comparable and iterable