@@ -16,15 +16,26 @@ dependencies {
   implementation 'org.apache.httpcomponents.client5:httpclient5-fluent:5.2.1'
   implementation 'org.terracotta:terracotta-utilities-tools:0.0.16'
 
-  testImplementation platform('org.junit:junit-bom:5.9.1')
+  testImplementation platform('org.junit:junit-bom:5.14.2')
   testImplementation 'org.junit.jupiter:junit-jupiter'
   testImplementation 'org.junit.jupiter:junit-jupiter-params'
   testImplementation 'org.hamcrest:hamcrest:2.2'
-  testImplementation 'org.mockito:mockito-inline:4.11.0'
+  testImplementation 'org.mockito:mockito-core:5.10.0'
 }
 
 checkstyle {
   configFile = project.file 'config/checkstyle/copyright.xml'
+}
+
+testing {
+  suites.withType(JvmTestSuite) {
+    useJUnitJupiter()
+    targets.all {
+      testTask.configure {
+        jvmArgs '-XX:+EnableDynamicAgentLoading'
+      }
+    }
+  }
 }
 
 gradlePlugin {
